app kinda works but Security blocks every request..

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.security.filter.order=10
+spring.jpa.hibernate.ddl-auto=update
+app.jwt.secret=morveotesi
+# 21600000ms = 6hr
+app.jwt.expiration-in-ms=21600000
