rewrite Security related code using another JWT library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.security.filter.order=10
 spring.jpa.hibernate.ddl-auto=update
 app.jwt.secret=morveotesi
 # 21600000ms = 6hr
-app.jwt.expiration-in-ms=21600000
+app.jwt.expiration=21600000
