prepare for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.security.filter.order=10
+spring.datasource.url=jdbc:postgresql://userdb:5432/emlakilan_property
+spring.datasource.username=emlakilan_property
+spring.datasource.password=morveotesi
 spring.jpa.hibernate.ddl-auto=update
 app.jwt.secret=morveotesi
 # 21600000ms = 6hr
